@@ -77,7 +77,8 @@ CIrrDeviceConsole::CIrrDeviceConsole(const SIrrlichtCreationParameters& params)
 
 	if (CreationParams.Fullscreen)
 	{
-#if (_WIN32_WINNT >= 0x0501)
+// Some mingw versions lack this define, so avoid it in case it does not exist
+#if (_WIN32_WINNT >= 0x0501) && defined(CONSOLE_FULLSCREEN_MODE)
 		if (SetConsoleDisplayMode(WindowsSTDOut, CONSOLE_FULLSCREEN_MODE, Dimensions))
 		{
 			CreationParams.WindowSize.Width = Dimensions->X;
